# hyprland-settings

./: .gitignore  com.ml4w.hyprlandsettings.json
data/: com.ml4w.hyprlandsettings.desktop.in  com.ml4w.hyprlandsettings.metainfo.xml.in
src/: meson.build  window.py  window.ui
src/modules/: base.py  collections.py
src/scripts/: hyprctl.sh
